--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +13,9 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-search-autocomplete": "^8.5.2",
     "web-vitals": "^2.1.4"
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.3"
   }
